Bug 830551 - Send file-transfer-complete message after receiving unexpected response code from remote, r=echou